--- a/src/main/webapp/resources/css/loginstyle.css
+++ b/src/main/webapp/resources/css/loginstyle.css
@@ -19,7 +19,7 @@ body {
 	padding: 0;
 	margin-left: 0;
 	height: 100%;
-	background-color: #CAF0D3;
+	background-color: #fffff;
 	display: inline-block;
 	overflow: hidden;
 }
@@ -34,18 +34,20 @@ body {
 }
 
 #login{
-	padding-top: 10%;
+	
+	padding: 5%;
 	text-align: center;
 	text-transform: uppercase;
 }
 
 
 .login {
+	border :1px solid rgb(158, 157, 157, 0.8);
 	width: 100%;
 	height: 500px;
 	background-color: #fff;
 	padding: 15px;
-	padding-top: 30px;
+	padding-bottom: 5%
 }
 
 .login h1 {
@@ -87,8 +89,11 @@ body {
 /* Form check styles*/
 
 .form-check {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	padding: 0;
-	text-align: left;
+	/*text-align: left;*/
 }
 
 .form-check label {
