--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -214,6 +214,7 @@ a:link {
 }
 .header {
 	margin: auto auto 3px auto;
+	background-color: #fffff; /*dh*/
 }
 .header__top {
 	background: #f5f5f5;
