--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -539,6 +539,12 @@ a:link {
 	font-weight: bold;
 	color: rgba(0,88,0,0.7);
   }
+    a.scroll {
+	padding: 20px;
+	font-size: 18px;
+	font-weight: bold;
+	color: rgba(0,88,0,0.7);
+  }
 
 
 .sidebar-icon {
