--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -101,7 +101,6 @@ a:focus {
 	outline: none;
 	color: rgba(254, 150, 13, 0.5);
 }
-
 a {
     color: inherit;
     text-decoration: none;
@@ -2338,6 +2337,9 @@ label {
 }
 
 .blog__sidebar__item ul li a:hover {
+	color: rgba(0, 100, 0,0.8);
+}
+.scroll ul li a:hover {
 	color: rgba(0, 100, 0,0.8);
 }
 
