--- a/src/main/webapp/resources/css/loginstyle.css
+++ b/src/main/webapp/resources/css/loginstyle.css
@@ -1,19 +1,22 @@
 body {
 	font-family: 'Montserrat', sans-serif;
-	text-rendering : optimizeLegibility;
+	/*text-rendering : optimizeLegibility;*/
 	-webkit-font-smoothing : antialiased;
 }
 
+/*display: felx;
+	justify-content :center;
+	align-items: center;*/
 
-#login-bg.container-fluid {
+/*#login-bg.container-fluid {
 	padding: 0;
 	height: 100%;
 	position: absolute;
-}
+}*/
 
 /* Background image an color divs*/
 
-.bg-img , .bg-color {
+/*.bg-img  {
 	min-width: 50%;
 	vertical-align: top;
 	padding: 0;
@@ -22,11 +25,11 @@ body {
 	background-color: #fffff;
 	display: inline-block;
 	overflow: hidden;
-}
+}*/
 
-.bg-color {
+/*.bg-color {
 	margin-left: -5px;
-}
+}*/
 
 .bg-img {
 	background-image: url(./bg-image.jpeg);
@@ -35,23 +38,24 @@ body {
 
 #login{
 	
-	padding: 5%;
+	padding: 0 auto 7% auto;
 	text-align: center;
 	text-transform: uppercase;
 }
 
 
 .login {
-	border :1px solid rgb(158, 157, 157, 0.8);
+	/*border :1px solid rgb(158, 157, 157, 0.8)*/
 	width: 100%;
-	height: 500px;
+	height: 100%;
 	background-color: #fff;
-	padding: 15px;
-	padding-bottom: 5%
+	margin: auto;
+	
+	
 }
 
 .login h1 {
-	margin-top: 30px;
+	margin-top: 0px;
 	font-weight: bold;
 	font-size: 60px;
 	letter-spacing: 3px;
@@ -63,14 +67,73 @@ body {
 }
 
 .login .btn {
-	border-radius: 50px;
+	border-radius: 3px;
 	text-transform: uppercase;
 	font-weight: bold;
 	letter-spacing: 2px;
 	font-size: 20px;
-	padding: 14px;
-	background-color: #00B72E;
+	width: 400px;
+	height: 60px;
+	/*padding: 14px;*/
+	/*background-color: rgba(0, 100, 0,0.7);*/
+	color: #ffffff;
+	background-color: rgba(0, 100, 0,0.7);
+	border: 1px solid rgba(0, 100, 0,0.8);
 }
+
+.login .btn-j {
+	border-radius: 3px;
+	text-transform: uppercase;
+	font-weight: bold;
+	letter-spacing: 2px;
+	font-size: 20px;
+	width: 400px;
+	height: 60px;
+	/*padding: 14px;*/
+	/*background-color: rgba(0, 100, 0,0.7);*/
+	color: rgba(0, 100, 0,0.8) ;
+	background-color:#ffffff;
+	border: 1px solid rgba(0, 100, 0,0.7);
+}
+
+
+.login .btn-k {
+	border-radius: 3px;
+	text-transform: uppercase;
+	font-weight: bold;
+	letter-spacing: 2px;
+	font-size: 20px;
+	width: 400px;
+	height: 60px;
+	/*padding: 14px;*/
+	background-color:  rgba(254, 200, 13, 0.8);
+	border: 1px solid rgba(254, 200, 13, 0.6);
+}
+
+/* .login .btn btn-lg btn-block btn-success kko {
+	border-radius: 3px;
+	text-transform: uppercase;
+	font-weight: bold;
+	letter-spacing: 2px;
+	font-size: 20px;
+	width: 400px;
+	height: 60px;
+	/*padding: 14px;
+	background-color:  rgba(254, 200, 13, 0.9);}
+	 */
+
+/*.btn-success-k {
+	border-radius: 3px;
+	text-transform: uppercase;
+	font-weight: bold;
+	letter-spacing: 2px;
+	font-size: 20px;
+	width: 400px;
+	height: 60px;
+ 	color: #fff;
+    border-color: rgba(254, 200, 13, 0.9);
+}*/
+
 
 .form-group input {
 	font-size: 20px;
@@ -88,22 +151,54 @@ body {
 
 /* Form check styles*/
 
-.form-check {
+.form-checkk {
 	display: flex;
-	justify-content: space-between;
+	flex-direction:row;
+	justify-content: space-around;
 	align-items: center;
-	padding: 0;
+	
 	/*text-align: left;*/
 }
 
-.form-check label {
+.form-checkkk {
+	display: flex;
+	flex-direction:column;
+	/*justify-content: space-around;*/
+	align-items: center;
+	width: 500px;
+	margin : auto;
+	/*text-align: left;*/
+	color: #465347!important;
+}
+
+.form-check div {
+	display: flex;
+	flex-direction:row;
+	justify-content: space-between;
+	align-items: center;
+	width: 50%;
+	
+	/*text-align: left;*/
+}
+
+.form-check div a {
+	display: flex;
+	flex-direction:row;
+	justify-content: center;
+	align-items: center;
+	height: 40px;
+	width: 80px;
+	/*text-align: left;*/
+}
+
+/*.form-check label {
 	vertical-align: top;
 	padding-top: 5px;
 	padding-left: 5px;
 	font-size: 15px;
 	color: #606060;
 	font-size: 14px;
-}
+}*/
 
 .forgot-password {
 	text-align: right;
@@ -179,7 +274,8 @@ input:checked + .slider:before {
 /* Media queries */
 
 @media(max-width: 500px) {
-	.bg-img , .bg-color {
+	
+	.bg-img {
 	min-width: 100%;
 	height: 50%;
 	margin: 0;
@@ -193,7 +289,8 @@ input:checked + .slider:before {
 
 
 	#login {
-		padding-top: 50px;
+		padding-top: 30px;
+		padding-bottom: 30px;
 	}
 
 }
