--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -10,6 +10,7 @@
 /*------------------------------------------------------------------
 [Table of contents]
 
+
 1.  Template default CSS
 	1.1	Variables
 	1.2	Mixins
@@ -193,6 +194,17 @@ a:link {
 	border: none;
 }
 
+/*.btn btn-lg btn-block btn-success {
+	font-size: 14px;
+	color: #ffffff;
+	font-weight: 800;
+	text-transform: uppercase;
+	display: inline-block;
+	padding: 10px ;
+	background:  rgba(0, 100, 0,0.8);
+	border: none;
+}*/
+
 /*---------------------
   3.Header
 -----------------------*/
@@ -214,7 +226,7 @@ a:link {
 }
 .header {
 	margin: auto auto 3px auto;
-	background-color: #fffff; /*dh*/
+	background-color: #ffffff; /*dh*/
 }
 .header__top {
 	background: #f5f5f5;
@@ -2564,6 +2576,7 @@ label {
 -----------------------*/
 .footer spad {
 	background: #fff;
+	magin : 500px 0 0 0;
 }
 .vertical-line {
 	border-left: thick solid black;
@@ -2571,12 +2584,13 @@ label {
 }
 .footer {
 	background: #F3F6FA;
-	padding-top: 70px;
+	padding-top: 50px;
 	padding-bottom: 0;
+	margin: 100px;
 }
 
 .footer__about {
-	margin right: 20px;
+	margin-right: 20px;
 	margin-bottom: 30px;
 }
 
@@ -2655,7 +2669,9 @@ label {
 }
 
 .footer__widget .footer__widget__social a {
-	display: inline-block;
+	display: felx;
+	justify-content: center;
+	align-items: center;
 	height: 41px;
 	width: 41px;
 	font-size: 16px;
@@ -2671,9 +2687,19 @@ label {
 	-o-transition: all, 0.3s;
 	transition: all, 0.3s;
 	margin-right: 10px;
+	margin-top:10px;
 }
 
+.footer__widget .footer__widget__social a i{
+	display: felx;
+	justify-content: center;
+	align-items: center;
+	
+}
+
+
 .footer__widget .footer__widget__social a:last-child {
+	margin-top:2px;
 	margin-right: 0;
 }
 
