--- a/src/main/webapp/resources/css/mainPage.css
+++ b/src/main/webapp/resources/css/mainPage.css
@@ -22,6 +22,13 @@
 	height: 55px;
 }
 
+.footer__about {
+	width: 300px;
+}
+
+.footer__widget {
+	margin-left: 40px;
+}
 
 /*-----------------
   2. 이미지크기
