--- a/src/main/webapp/resources/css/store_noticeStyle.css
+++ b/src/main/webapp/resources/css/store_noticeStyle.css
@@ -9,99 +9,9 @@ form #store_not{
 	width: 1370px;
 }
 
-.title{
-	margin-left: 550px;
+.reviewboard{
+	width: 800px;
 }
-
-.qnabox1 {
-    border-style:solid;
-    border-width:1px;  
-    border-color:#eeeeee;
-    border-radius: 10px;
-    width: 800px;
-    height: 280px;
-    margin-left: 450px;
-    margin-top: 20px;
-    background-color:#f7f7f7;
-   
-    
-}
-
-
-.qnabox2 {  
- 	position:relative; 
- 	margin: 50px;
- 	width: 690px;
- 	height: 137px;
- 	background: #dedede; 
-  	border-radius: 10px;
-  	margin-top: 40px;
-  	margin-left: 55px;
-}
-    
-}
-.qnabox2:after { 
- 	border-top:0px solid transparent; 
- 	border-left: 10px solid transparent; 
- 	border-right: 10px solid transparent; 
- 	border-bottom: 10px solid  #dedede; 
- 	content:""; 
- 	position:absolute;
- 	top:-10px;
- 	left:20px;  
-}
-
-.qnabox2 h5{
-	margin-left: 10px;
-	margin-top: 20px;
-}
-
-
-.qnabox3 {
-    border-style:solid;
-    border-width:1px;  
-    border-color:#eeeeee;
-    border-radius: 10px;
-    width: 800px;
-    height: 130px;
-    margin-left: 450px;
-    margin-top: 20px;
-    background-color:#f7f7f7;
-   
-    
-}
-
-.uid{
-	margin-top: 45px;
-    margin-left: 460px;
-    margin-bottom: -13px;
-}
-
-.qnatitle{
-	margin-top: 8px;
-    margin-left: 10px;
-
-}
-.qnacontent{
-	margin-top: 5px;
-    margin-left: 10px;
-
-}
-
-.button {
-   width: 100px;
-   height: 30px;
-   border-style: solid;
-   border-width: 2px;
-   margin-left: 460px;
-   margin-top: 10px;
-}
-
-.button h5 {
-	text-align: center;
-}
-
-
 
 
 
