--- a/src/main/webapp/resources/css/shopgrid.css
+++ b/src/main/webapp/resources/css/shopgrid.css
@@ -22,6 +22,14 @@
 	display: flex;
 	justify-content: center;
 	}
+	.shoplistoness{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 35px;
+	height: 35px;
+	font-size: 20px;
+	}
 	.shoplisttwo{
 	padding-top: 10px;
 	padding-bottom: 10px;
