--- a/src/main/webapp/resources/css/review_list_grid.css
+++ b/src/main/webapp/resources/css/review_list_grid.css
@@ -1,18 +1,12 @@
 @charset "utf-8";
 
 	/*조건필터*/
-	.shoplistt{
-	display: flex;
-	justify-content: center;
-	}
 	.shoplist {
 	padding-top: 20px;
 	padding-right: 30px;
 	padding-left: 30px; 
 	 background-color: #f5faff;
 	 padding-bottom: 20px;
-	 width: 100%;
-	 max-width: 1140px;
 	}
 	.shoplistone{
 	display: flex;
@@ -154,15 +148,9 @@
 	display: flex;
 	justify-content: center;
 	}
+	/*리뷰 위치조정*/
 	.reviewlist{
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
-	align-items: center;
-	}
-	.reviewlistm{
-	margin-top: 50px;
-	display: flex;
-	justify-content: flex-end;
 	align-items: center;
 	}
