--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -292,6 +292,10 @@ ol {
 .header {
 	margin: 10px;
 }
+.header__logo a .mainlogo_img{
+	width: 160px;
+	height: 160px;
+}
 .header__top {
 	background: #f5f5f5;
 }
@@ -3517,3 +3521,4 @@ ol {
 		font-size: 24px;
 	}
 }
+
