--- a/src/main/webapp/resources/css/storelist.css
+++ b/src/main/webapp/resources/css/storelist.css
@@ -36,6 +36,21 @@ table {
    border-collapse: collapse;
    border-spacing: 0;
 }
+.row {
+	display: flex;
+   justify-content : center;
+}
+
+#card_row {
+	display: flex;
+   	justify-content : center;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-items:center;
+	align-content:center;
+	width: 1370px;
+	margin-left: 140px;
+}
 .card_row_box {
    display: flex;
    /*flex-direction: row;*/
@@ -73,18 +88,6 @@ table {
 	
 }
 
-
-#card_row {
-	display: flex;
-	flex-direction: row;
-	/*justify-content: space-evenly;*/
-	justify-content: start;
-	flex-wrap: wrap;
-	align-items:center;
-	align-content:flex-start;
-	margin : 0 auto;
-	width: 1370px;
-}
 .card_store_box {
 	margin : 10px 47px 80px 47px;
 	width: 300
@@ -122,17 +125,6 @@ table {
 	color : black;
 	text-align: right;
 	
-#card_row {
-   display: flex;
-   flex-direction: row;
-   /*justify-content: space-evenly;*/
-   justify-content: start;
-   flex-wrap: wrap;
-   align-items:center;
-   align-content:flex-start;
-   margin : 0 auto;
-   width: 1370px;
-}
 .card_store_box {
    margin : 10px 47px 80px 47px;
    width: 300
