--- a/src/main/webapp/resources/css/loginstyle.css
+++ b/src/main/webapp/resources/css/loginstyle.css
@@ -37,7 +37,7 @@ body {
 }
 
 #login{
-	
+	margin-top: 110px;
 	padding: 0 auto 7% auto;
 	text-align: center;
 	text-transform: uppercase;
@@ -46,6 +46,7 @@ body {
 
 .login {
 	/*border :1px solid rgb(158, 157, 157, 0.8)*/
+	/*border-top: 2px solid #b8b8b8;*/
 	width: 100%;
 	height: 100%;
 	background-color: #fff;
@@ -72,13 +73,13 @@ body {
 	font-weight: bold;
 	letter-spacing: 2px;
 	font-size: 20px;
-	width: 400px;
+	width: 410px;
 	height: 60px;
 	/*padding: 14px;*/
 	/*background-color: rgba(0, 100, 0,0.7);*/
 	color: #ffffff;
-	background-color: rgba(0, 100, 0,0.7);
-	border: 1px solid rgba(0, 100, 0,0.8);
+	background-color: #7fad39;
+	border: 1px solid #7fad39;
 }
 
 .login .btn-j {
@@ -87,13 +88,13 @@ body {
 	font-weight: bold;
 	letter-spacing: 2px;
 	font-size: 20px;
-	width: 400px;
+	width: 410px;
 	height: 60px;
 	/*padding: 14px;*/
 	/*background-color: rgba(0, 100, 0,0.7);*/
-	color: rgba(0, 100, 0,0.8) ;
+	color: #7fad39;
 	background-color:#ffffff;
-	border: 1px solid rgba(0, 100, 0,0.7);
+	border: 1px solid #7fad39;
 }
 
 
@@ -103,7 +104,7 @@ body {
 	font-weight: bold;
 	letter-spacing: 2px;
 	font-size: 20px;
-	width: 400px;
+	width: 410px;
 	height: 60px;
 	/*padding: 14px;*/
 	background-color:  rgba(254, 200, 13, 0.8);
@@ -165,7 +166,7 @@ body {
 	flex-direction:column;
 	/*justify-content: space-around;*/
 	align-items: center;
-	width: 500px;
+	width: 420px;
 	margin : auto;
 	/*text-align: left;*/
 	color: #465347!important;
