--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -122,6 +122,13 @@ ol {
 	position: relative;
 }
 
+.section-title .index_h {
+	color: #1c1c1c;
+	font-weight: 700;
+	position: relative;
+	margin-top: 90px;
+}
+
 .section-title h2:after {
 	position: absolute;
 	left: 0;
@@ -156,12 +163,14 @@ ol {
 .row_main {
 	margin: 0px;
 	width: 100%;
-	height: 170px;
+	height: 130px;
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-end;
 	flex-direction: row;
 }
+
+
 
 .row_main_cate {
 	margin: 0 50px;
@@ -289,9 +298,47 @@ ol {
 /*---------------------
   Header
 -----------------------*/
-.header {
-	margin: 10px;
+
+/*-----------------
+  1. 박스
+-----------------*/
+.hero__categories li {
+	width: 220px;
+	height: 55px;
 }
+
+.footer__about {
+	width: 300px;
+}
+
+.footer__widget {
+	margin-left: 40px;
+}
+
+/*-----------------
+  2. 이미지크기
+-----------------*/
+.header__logo a .mainlogo_img{
+	width: 261.99px;
+	height: 100.99px;
+}
+
+
+
+
+.row_main .col-lg-3  {
+	padding: 0px;
+	margin: 0px;	
+}
+
+.header {
+	margin: 0;
+	width: 100%;
+	height: 177px;
+}
+
+
+
 .header__top {
 	background: #f5f5f5;
 }
@@ -335,6 +382,7 @@ ol {
 .header__top__right {
 	text-align: right;
 	padding: 10px 0 13px;
+	font-family: "Cairo", sans-serif;
 }
 
 .header__top__right__social {
@@ -463,8 +511,10 @@ ol {
 }
 
 .header__menu {
-	padding: 24px 0;
+	padding: 40px 100px 40px 0px;
 }
+
+
 
 .header__menu ul li {
 	list-style: none;
@@ -615,6 +665,10 @@ ol {
 	padding-bottom: 30px;
 }
 
+.hero__categories_simple {
+	margin: 15px;
+}
+
 .hero.hero-normal .hero__categories {
 	position: relative;
 }
@@ -640,11 +694,15 @@ ol {
 	cursor: pointer;
 }
 
+
+
 .hero__categories__all i {
 	font-size: 16px;
 	color: #ffffff;
 	margin-right: 10px;
 }
+
+
 
 .hero__categories__all span {
 	font-size: 18px;
@@ -661,6 +719,8 @@ ol {
 	font-size: 18px;
 	color: #ffffff;
 }
+
+
 
 .hero__categories ul {
 	border: 1px solid #ebebeb;
@@ -684,6 +744,12 @@ ol {
 	overflow: hidden;
 	margin-bottom: 15px;
 	width: 750px;
+}
+
+.hero__search_simple {
+	overflow: hidden;
+	margin-bottom: 15px;
+	width: 500px;
 }
 
 .hero__search__form {
@@ -2658,6 +2724,17 @@ ol {
 .blog__details__widget .blog__details__social a:last-child {
 	margin-right: 0;
 }
+
+
+/*---------------------
+  banner
+-----------------------*/
+.banner {
+	margin-top:80px;
+}
+
+
+
 
 /*---------------------
   Footer
