--- a/src/main/webapp/resources/css/shop-details.css
+++ b/src/main/webapp/resources/css/shop-details.css
@@ -14,3 +14,14 @@
 	width:400px; 
 	height:380px;
 }
+.col-md-6 span{
+	font-size:15px;
+}
+.col-md-6{
+	margin-top : 30px;
+}
+
+
+.row .col-md-6 button{
+	margin-top : 20px; font-size:15px;
+}
