--- a/src/main/webapp/resources/css/member_liststoreStyle.css
+++ b/src/main/webapp/resources/css/member_liststoreStyle.css
@@ -1,45 +1,66 @@
 @charset "UTF-8";
 
 .card_box {
-	display: flex;
-	/*justify-content: center;
-	align-items: center;*/
-	flex-direction: row;
-	width: 250px;
-	height: 100%;
-	margin
+   display: flex;
+   /*justify-content: center;
+   align-items: center;*/
+   flex-direction: row;
+   width: 250px;
+   height: 100%;
+   margin
 }
 
 .card {
-	margin-right: 90px;
+   margin-right: 90px;
 }
 
 .container .update {
-	
-	width: 100%;
-	
+   
+   width: 100%;
+   
 }
 
 th{
-	font-size: large;
+   font-size: large;
 }
 
 tr{
-	font-size: medium;
+   font-size: medium;
 }
 
-/*
-.card_box .col-lg-8 {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: row;
-	
-}*/
 
+.card_box {
+   display: inline;
+   
+}
+
+.likecard{
+   position: relative;
+    display: flex;
+    flex-direction: inherit;
+    min-width: 0;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgb(230 220 220 / 13%);
+    border-radius: .25rem;
+    width: 700px;
+    margin-bottom: 30px;
+}
+
+.card-body {
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1.25rem;
+    width: 600%;
+}
+
+.card-img{
+   width: 1500px;
+}
 
 
 /*soobin*/
 .reviewboard{
-	width: 800px;
+   width: 800px;
 }
