--- a/src/main/webapp/resources/css/shop-details.css
+++ b/src/main/webapp/resources/css/shop-details.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+
 .product__details__pic__item img{
 	width:400px; 
 	height :380px;
@@ -13,4 +14,47 @@
 	
 	width:400px; 
 	height:380px;
+}
+
+.featured__item {
+	margin:0;
+}
+
+.shop_info_bar .col-md-8 span {
+	size: 25px;
+	margin: 0 5px;
+	
+}
+
+
+
+.shop_menu {
+	display : flex;
+	justify-content: flex-end;
+	align-items: flex-end;
+	text-align: right;
+	flex-direction: column;
+}
+
+.shop_menu h3{
+	font-size: 26px;
+	display : flex;
+	justify-content: flex-start;
+	align-items: flex-end;
+}
+
+/*.shop_menu_box span{
+	display : flex;
+	justify-content: flex-start;
+	align-items: flex-end;
+	text-align: right;
+	flex-direction: column;
+}*/
+
+.shop_cartbar {
+	display : flex;
+	justify-content: center;
+	align-items: center;
+	text-align: right;
+	flex-direction: column;
 }
