--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -323,8 +323,11 @@ ol {
 	height: 100.99px;
 }
 
-
-
+/*.header__logo a .mainlogo_img{
+	width: 160px;
+	height: 160px;
+}
+*/
 
 .row_main .col-lg-3  {
 	padding: 0px;
@@ -337,10 +340,7 @@ ol {
 	height: 177px;
 }
 
-.header__logo a .mainlogo_img{
-	width: 160px;
-	height: 160px;
-}
+
 
 .header__top {
 	background: #f5f5f5;
