--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -112,8 +112,15 @@ ol {
 -----------------------*/
 
 .section-title {
-	margin-bottom: 50px;
+	margin-bottom: 30px;
 	text-align: center;
+}
+
+.section-title h2 a {
+	margin-bottom: 30px;
+	text-align: center;
+	text-decoration: noen;
+	color: black;
 }
 
 .section-title h2 {
@@ -315,6 +322,8 @@ ol {
 	margin-left: 40px;
 }
 
+
+
 /*-----------------
   2. 이미지크기
 -----------------*/
@@ -492,9 +501,10 @@ ol {
 }
 
 .header__top__right__auth a {
-	display: block;
-	font-size: 14px;
+	display:  inline-block;
+	font-size: 15px;
 	color: #1c1c1c;
+	margin: 0px 10px; 
 }
 
 .header__top__right__auth a i {
@@ -893,11 +903,12 @@ ol {
 .categories__item h5 a {
 	font-size: 18px;
 	color: #1c1c1c;
-	font-weight: 700;
+	font-weight: 600;
 	text-transform: uppercase;
 	letter-spacing: 2px;
-	padding: 12px 0 10px;
-	background: #ffffff;
+	padding: 5px 0 5px;
+	/*background: #ffffff;*/
+	background: rgb(255, 255, 255, 0.7);
 	display: block;
 }
 
@@ -1198,6 +1209,10 @@ ol {
   Sidebar
 -----------------------*/
 
+/*.sidebar {
+	border: 1.5px solid ;
+}*/
+
 .sidebar__item {
 	margin-bottom: 35px;
 }
@@ -1208,8 +1223,10 @@ ol {
 
 .sidebar__item h4 {
 	color: #1c1c1c;
-	font-weight: 700;
+	font-weight: 600;
 	margin-bottom: 25px;
+	/*background: rgb(127, 173, 57,0.8);
+	font-family: "Cairo", sans-serif;*/
 }
 
 .sidebar__item ul li {
@@ -2141,7 +2158,7 @@ ol {
 	background: #f5f5f5;
 	padding: 30px;
 	padding-top: 20px;
-	margin-top: 50px;
+	margin-top: 10px;
 }
 
 .shoping__checkout h5 {
@@ -2165,6 +2182,23 @@ ol {
 	padding-bottom: 13px;
 	margin-bottom: 18px;
 }
+
+.shoping__checkout #ul-li {
+	font-size: 16px;
+	color: #1c1c1c;
+	font-weight: 700;
+	list-style: none;
+	overflow: hidden;
+	border-bottom: none;
+	padding-bottom: 13px;
+	margin-bottom: 18px;
+}
+
+.shoping__checkout #tot-li, span {
+	font-size: 24px;
+	
+}
+
 
 .shoping__checkout ul li:last-child {
 	padding-bottom: 0;
@@ -2763,6 +2797,11 @@ ol {
 
 .footer__about__logo {
 	margin-bottom: 15px;
+}
+
+.footer__about__logo img {
+	width: 200px;
+	height:80px;
 }
 
 .footer__about__logo a {
