--- a/src/main/webapp/resources/css/event.css
+++ b/src/main/webapp/resources/css/event.css
@@ -79,7 +79,7 @@ body {
 /* 2. 내용크기
 /*----------------------------------------*/
 .update {
-	width: 450px;
+	width: 510px;
     height: 100%;
     display: flex;
     justify-content: flex-start;
@@ -261,23 +261,14 @@ body {
     letter-spacing: 2px;
 }
 
+
+
 .update .update_btn {
 	width: 80%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-left: 30px;
-    margin-top: 20px;
-    padding-top: 20px;
-   
-}
-
-
-.update .join_btn {
-	width: 80%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    margin-left: 45px;
     margin-top: 20px;
     padding-top: 20px;
    
@@ -348,3 +339,84 @@ align-item: center;
 .reviewboard{
 	width: 580px;
 }
+/*이벤트 페이지 관련*/
+.eventList{
+	width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-right: 90px;
+    margin-right: 50px;
+}
+
+.eventList .section-title {
+	margin-top: -10px;
+}
+
+.evetListn{
+	width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    margin-right: 50px;
+}
+.eventList .col-md-12 img{
+	
+	width: 100%; 
+}
+
+.eventList .eventd h5{
+	text-align: center;
+	align-items: center;
+	font-size: 70%;
+	margin-top: 10px;	
+}
+
+
+.rowNotice{
+	width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.qnaList .table thead tr th,
+.qnaList .table tbody tr td{
+	text-align: center;
+} 
+
+.eventListn img{
+	width:70%;
+	flex-direction: column;
+	margin-right: 60px;
+	margin-bottom: 20px;
+}
+.eventListn .col-md-12 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	margin-top: -10px;
+	
+}
+
+.event_btn{
+	width: 80%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-left: 30px;
+    margin-top: 20px;
+    padding-top: 20px;
+   
+}
+
+.section-title{
+	margin-top: 70px;
+}
+
