--- a/src/main/webapp/resources/css/menu_regStyle.css
+++ b/src/main/webapp/resources/css/menu_regStyle.css
@@ -259,8 +259,8 @@ font {
 .menu_reg .btn-jj { 
     width: 180px;
     height: 50px;
-    background: rgba(0, 100, 0,0.7);
-    border: 1px solid rgba(0, 100, 0,0.6);
+    background: #7fad39;
+    border: 1px solid #7fad39;
     font-family: "Cairo", sans-serif;
     font-size: 15px;
     font-weight: bold;
