--- a/src/main/webapp/resources/css/qna.css
+++ b/src/main/webapp/resources/css/qna.css
@@ -79,7 +79,7 @@ body {
 /* 2. 내용크기
 /*----------------------------------------*/
 .update {
-	width: 450px;
+	width: 510px;
     height: 100%;
     display: flex;
     justify-content: flex-start;
@@ -261,26 +261,21 @@ body {
     letter-spacing: 2px;
 }
 
-.update .update_btn {
-	width: 80%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-left: 30px;
-    margin-top: 20px;
-    padding-top: 20px;
-   
-}
 
-
-.update .join_btn {
-	width: 80%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 20px;
-    padding-top: 20px;
-   
+.btn{
+ 	width: 100%;
+    height: 100%;
+    background: #7fad39;
+    border: 1px solid #7fad39;
+    font-family: "Cairo", sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    border-radius: 3px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: white;
+    margin-top: 30px;
+	align: right;
 }
 
 .update form .add_btn {
@@ -348,3 +343,56 @@ align-item: center;
 .reviewboard{
 	width: 580px;
 }
+/*이벤트 페이지 관련*/
+.qnaList{
+	width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+}
+.rowNotice{
+	width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.qnaList .table thead tr th,
+.qnaList .table tbody tr td{
+	text-align: center;
+}
+.qnaListn{
+	width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+} 
+.row {
+	width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+.section-title {
+	margin-bottom: 30px;
+}
+.product__pagination {
+	margin-top: 50px;
+}
+
+.qnabutton{
+	display: flex;
+	justify-content: flex-end;
+	align-items:flex-end;
+	text-align: right;
+	height: 35px;
+	width: 100%
+}
+
+
+
