--- a/src/main/webapp/resources/css/storewait.css
+++ b/src/main/webapp/resources/css/storewait.css
@@ -79,7 +79,7 @@ body {
 /* 2. 내용크기
 /*----------------------------------------*/
 .update {
-	width: 450px;
+	width: 510px;
     height: 100%;
     display: flex;
     justify-content: flex-start;
@@ -261,27 +261,6 @@ body {
     letter-spacing: 2px;
 }
 
-.update .update_btn {
-	width: 80%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-left: 30px;
-    margin-top: 20px;
-    padding-top: 20px;
-   
-}
-
-
-.update .join_btn {
-	width: 80%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 20px;
-    padding-top: 20px;
-   
-}
 
 .update form .add_btn {
 	height:35px;
@@ -348,3 +327,62 @@ align-item: center;
 .reviewboard{
 	width: 580px;
 }
+/*이벤트 페이지 관련*/
+.qnaList{
+	width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+}
+.rowNotice{
+	width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.qnaList .table thead tr th,
+.qnaList .table tbody tr td{
+	text-align: center;
+}
+.qnaListn{
+	width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+} 
+.row {
+	width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+.section-title {
+	margin-bottom: 30px;
+}
+.qnaList td{
+	text-align: center;
+}
+.product__pagination{
+	margin-top: 20px;
+}
+
+.bbtn{
+ 	width: 100px;
+    height: 30px;
+    background: #7fad39;
+    border: 1px solid #7fad39;
+    font-family: "Cairo", sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    border-radius: 3px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: white;
+}
+
