--- a/src/main/webapp/resources/css/updateList.css
+++ b/src/main/webapp/resources/css/updateList.css
@@ -79,7 +79,7 @@ body {
 /* 2. 내용크기
 /*----------------------------------------*/
 .update {
-	width: 450px;
+	width: 510px;
     height: 100%;
     display: flex;
     justify-content: flex-start;
@@ -261,23 +261,14 @@ body {
     letter-spacing: 2px;
 }
 
+
+
 .update .update_btn {
 	width: 80%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-left: 30px;
-    margin-top: 20px;
-    padding-top: 20px;
-   
-}
-
-
-.update .join_btn {
-	width: 80%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    margin-left: 45px;
     margin-top: 20px;
     padding-top: 20px;
    
@@ -348,3 +339,52 @@ align-item: center;
 .reviewboard{
 	width: 580px;
 }
+/*이벤트 페이지 관련*/
+.qnaList{
+	width: 100%;
+    height: 100%;
+    flex-direction:column;
+}
+.rowNotice{
+	width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+
+.qnaList .table thead tr th,
+.qnaList .table tbody tr td{
+	text-align: center;
+}
+.qnaListn{
+	width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+} 
+
+.btn button{
+ 	width: 180px;
+    height: 50px;
+    background: #7fad39;
+    border: 1px solid #7fad39;
+    font-family: "Cairo", sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    border-radius: 3px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: white;
+   	text-align: center;
+   	align-items: center;
+}
+.product__pagination{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 40px;
+}
+
