--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -497,12 +497,13 @@ ol {
 
 .header__top__right__auth {
 	display: inline-block;
-	margin: auto 10px;
+	margin: auto 0;
+	font
 }
 
 .header__top__right__auth a {
 	display:  inline-block;
-	font-size: 15px;
+	font-size: 16px;
 	color: #1c1c1c;
 	margin: 0px 10px; 
 }
