--- a/src/main/webapp/resources/css/joinstyle.css
+++ b/src/main/webapp/resources/css/joinstyle.css
@@ -257,6 +257,10 @@ body {
     margin: 0;
 }
 
+.current{
+	font-size: 13px;	
+}
+
 
 /*---------------------------------------------*/
 /* Media queries */
