--- a/src/main/webapp/resources/css/qna.css
+++ b/src/main/webapp/resources/css/qna.css
@@ -357,7 +357,7 @@ align-item: center;
 	width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content:flex-start;
     flex-direction: column;
 }
 
@@ -378,9 +378,7 @@ align-item: center;
     justify-content: center;
     flex-direction: row;
 }
-.section-title {
-	margin-bottom: 30px;
-}
+
 .product__pagination {
 	margin-top: 50px;
 }
@@ -392,6 +390,13 @@ align-item: center;
 	text-align: right;
 	height: 35px;
 	width: 100%
+}
+
+
+
+..product__discount__title {
+    text-align: left;
+    margin-bottom: 65px;
 }
 
 
