--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -107,6 +107,14 @@ ol {
 	margin: 0;
 }
 
+/*a {
+	
+	text-decoration: none; 
+	outline: none
+}*/
+
+
+
 /*---------------------
   Helper CSS
 -----------------------*/
@@ -506,6 +514,7 @@ ol {
 	font-size: 16px;
 	color: #1c1c1c;
 	margin: 0px 10px; 
+	
 }
 
 .header__top__right__auth a i {
@@ -518,6 +527,7 @@ ol {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	text-decoration: none;
 }
 
 .header__logo a {
@@ -589,7 +599,7 @@ ol {
 }
 
 .header__menu ul li a {
-	font-size: 14px;
+	font-size: 17px;
 	color: #252525;
 	text-transform: uppercase;
 	font-weight: 700;
