--- a/src/main/webapp/resources/css/joinstyle.css
+++ b/src/main/webapp/resources/css/joinstyle.css
@@ -10,8 +10,8 @@
 /* 1.body
 /*----------------------------------------*/
 body {
-	/*font-family: "Cairo", sans-serif;*/
-	font-family: 'Montserrat', sans-serif;
+	font-family: "Cairo", sans-serif;
+	/*font-family: 'Montserrat', sans-serif;*/
 	/*text-rendering : optimizeLegibility;*/
 	-webkit-font-smoothing : antialiased;
 }
