--- a/src/main/webapp/resources/css/loginstyle.css
+++ b/src/main/webapp/resources/css/loginstyle.css
@@ -1,6 +1,7 @@
 body {
-	font-family: 'Montserrat', sans-serif;
+	/*font-family: 'Montserrat', sans-serif;*/
 	/*text-rendering : optimizeLegibility;*/
+	font-family: "Cairo", sans-serif;
 	-webkit-font-smoothing : antialiased;
 }
 
