--- a/src/main/webapp/resources/css/menu_regStyle.css
+++ b/src/main/webapp/resources/css/menu_regStyle.css
@@ -77,7 +77,7 @@ font {
 /* 2. 내용크기
 /*----------------------------------------*/
 .menu_reg {
-	width: 700px;
+	width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -102,7 +102,6 @@ font {
 	flex-direction: column;
 	padding-top: 20px;
 	width: 500px;
-	border-top: 2px solid #333;
 }
 
 .menu_reg .radio_input {
@@ -314,5 +313,8 @@ font {
 	font-size: 13px;
 	width: 350px;
 	height: 35px;
+}
+.linez{
+	border-bottom: 2px solid #dee2e6;
 }
 
