--- a/src/main/webapp/resources/css/store_reviewStyle.css
+++ b/src/main/webapp/resources/css/store_reviewStyle.css
@@ -9,10 +9,8 @@ form #store_not{
 	
 }
 
-.reviewboard{
-	width: 800px;
-}
-.reviewboard button{
+
+.button{
 	width: 100px;
 	height: 100%;
 	background: #7fad39;
@@ -26,7 +24,9 @@ form #store_not{
     color: white;
 }
 
-
+.reviewbor{
+	width: 100%;
+}
 
 .join_btn .btn-jj {
 	width: 220px;
@@ -42,10 +42,28 @@ form #store_not{
 }
 
 
+.rowstreview{
+	width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
 
 
-
-
-
+.btn .btn-primary .btn-xs .pull-right #myBtn{
+	background: #7fad39;
+    border: 1px solid #7fad39;
+    font-family: "Cairo", sans-serif;
+    font-size: 15px;
+    font-weight: bold;
+    border-radius: 3px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: white;
+}
+.linez{
+	border-bottom: 2px solid #dee2e6;
+}
 
 
