--- a/src/main/webapp/resources/css/store_updateStyle.css
+++ b/src/main/webapp/resources/css/store_updateStyle.css
@@ -95,7 +95,6 @@ readonly
 	flex-direction: column;
 	padding-top: 20px;
 	width: 500px;
-	border-top: 2px solid #333;
 }
 
 .store_updateform .radio_input {
@@ -359,4 +358,7 @@ readonly
 	flex-direction: row;
 	width: 100%;
 	height: 100%;
+}
+.linez{
+	border-bottom: 2px solid #dee2e6;
 }
