--- a/src/main/webapp/resources/css/storewait.css
+++ b/src/main/webapp/resources/css/storewait.css
@@ -104,7 +104,6 @@ body {
 	flex-direction: column;
 	padding-top: 20px;
 	width: 510px;
-	border-top: 2px solid #333;
 }
 
 
@@ -333,9 +332,8 @@ align-item: center;
     height: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-direction: column;
-    text-align: center;
+    text-align: left;
 }
 .rowNotice{
 	width: 100%;
@@ -353,6 +351,7 @@ align-item: center;
 	width: 100%;
     height: 100%;
     display: flex;
+    justify-content:flex-start;
     flex-direction: row;
 } 
 .row {
@@ -365,7 +364,7 @@ align-item: center;
 .section-title {
 	margin-bottom: 30px;
 }
-.qnaList td{
+.col-lg-9 .table .table-striped td{
 	text-align: center;
 }
 .product__pagination{
@@ -385,4 +384,6 @@ align-item: center;
     letter-spacing: 2px;
     color: white;
 }
-
+.linez{
+	border-bottom: 2px solid #dee2e6;
+}
