--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -684,7 +684,7 @@ ol {
 }
 
 .hero.hero-normal .hero__categories {
-	position: relative;
+	/* position: relative; */
 }
 
 .hero.hero-normal .hero__categories ul {
@@ -703,7 +703,7 @@ ol {
 
 .hero__categories__all {
 	background: #7fad39;
-	position: relative;
+	/* position: relative; */
 	padding: 10px 25px 10px 40px;
 	cursor: pointer;
 }
@@ -724,7 +724,7 @@ ol {
 	color: #ffffff;
 }
 
-.hero__categories__all:after {
+/* .hero__categories__all:after {
 	position: absolute;
 	right: 18px;
 	top: 9px;
@@ -733,7 +733,7 @@ ol {
 	font-size: 18px;
 	color: #ffffff;
 }
-
+ */
 
 
 .hero__categories ul {
