--- a/src/main/webapp/resources/css/updateList.css
+++ b/src/main/webapp/resources/css/updateList.css
@@ -79,11 +79,11 @@ body {
 /* 2. 내용크기
 /*----------------------------------------*/
 .update {
-	width: 510px;
+	width: 100%;
     height: 100%;
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    align-items: left;
     flex-direction: column;
 }
 
@@ -92,19 +92,19 @@ body {
 	justify-content: flex-start;
 	align-items: center;
 	flex-direction: column;
-	width: 400px;
+	width: 100%;
 	height: 100%;
 	 
 }
 
 .update form {
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	justify-content: flex-start;
+	align-items: left;
 	flex-direction: column;
 	padding-top: 20px;
-	width: 510px;
-	border-top: 2px solid #333;
+	width: 100%;
+
 }
 
 
@@ -335,9 +335,22 @@ align-item: center;
     width: 134px;
 }
 
+.reviewlis{
+	width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+}
+
 /*soobin*/
+.updateLIST{
+	
+}
 .reviewboard{
-	width: 580px;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
 }
 /*이벤트 페이지 관련*/
 .qnaList{
@@ -365,6 +378,12 @@ align-item: center;
     align-items: center;
     flex-direction: column;
 } 
+.updateform_info{
+	display: flex;
+	justify-content: flex-start;
+	flex-direction: column;
+	
+}
 
 .btn button{
  	width: 180px;
@@ -388,3 +407,6 @@ align-item: center;
 	margin-top: 40px;
 }
 
+.linez{
+	border-bottom: 2px solid #dee2e6;
+}
