--- a/src/main/webapp/resources/css/updateList.css
+++ b/src/main/webapp/resources/css/updateList.css
@@ -9,7 +9,6 @@
 3.  info btn, input 
 -------------------------------------------------------------------*/
 
-
 /*----------------------------------------*/
 /* 1.body
 /*----------------------------------------*/
@@ -22,6 +21,11 @@ body {
 .main_mypage{
 	display: flex;
 	justify-content: flex-start;
+}
+
+.row {
+	display: flex;
+	justify-content: center;
 }
 
 
@@ -343,15 +347,14 @@ align-item: center;
     flex-direction: column;
 }
 
-/*soobin*/
-.updateLIST{
-	
-}
 .reviewboard{
+	display: flex;
+	margin-right: 200px;
     width: 100%;
     height: 100%;
     flex-direction: column;
 }
+
 /*이벤트 페이지 관련*/
 .qnaList{
 	width: 100%;
