--- a/src/main/webapp/resources/css/shopgrid.css
+++ b/src/main/webapp/resources/css/shopgrid.css
@@ -138,6 +138,8 @@
    .shopliststartwo li{
    list-style:none;
    font-family: "Cairo", sans-serif;
+   /*soobin */
+   margin-right: 42px;
    }
    .shoplistb{
    padding-top: 10px;
