--- a/src/main/webapp/resources/css/admin_event.css
+++ b/src/main/webapp/resources/css/admin_event.css
@@ -51,8 +51,10 @@ form #store_not{
 }
 
 
-.btn .btn-primary .btn-xs .pull-right #myBtn{
-	background: #7fad39;
+#write{
+	width: 100%;
+    height: 100%;
+    background: #7fad39;
     border: 1px solid #7fad39;
     font-family: "Cairo", sans-serif;
     font-size: 15px;
@@ -61,9 +63,6 @@ form #store_not{
     text-transform: uppercase;
     letter-spacing: 2px;
     color: white;
-}
-.linez{
-	border-bottom: 2px solid #dee2e6;
 }
 
 .btn{
@@ -78,12 +77,11 @@ form #store_not{
     text-transform: uppercase;
     letter-spacing: 2px;
     color: white;
-    margin-top: 30px;
+    margin-top: 0px;
 }
-.btn-primary{
-		width: 100%;
-    height: 100%;
-    background: #7fad39;
+
+.btn .btn-primary .btn-xs .pull-right #write{
+	background: #7fad39;
     border: 1px solid #7fad39;
     font-family: "Cairo", sans-serif;
     font-size: 15px;
@@ -92,7 +90,22 @@ form #store_not{
     text-transform: uppercase;
     letter-spacing: 2px;
     color: white;
-    margin-top: 30px;
-	align: center;
 }
 
+.linez{
+	border-bottom: 2px solid #dee2e6;
+}
+
+.table .table-hover{
+	width: 100%;
+    margin-bottom: 1rem;
+    color: #212529;
+}
+
+.table .table-hover th,td{
+	text-align: center;
+	font-size: 16px;
+	
+}
+.table .table-hover tr,th{
+	padding: 0px;
