--- a/src/main/webapp/resources/css/admin_qnaw.css
+++ b/src/main/webapp/resources/css/admin_qnaw.css
@@ -78,10 +78,10 @@ form #store_not{
     text-transform: uppercase;
     letter-spacing: 2px;
     color: white;
-    margin-top: 30px;
 }
-.btn-primary{
-		width: 100%;
+
+#myBtn{
+	width: 100%;
     height: 100%;
     background: #7fad39;
     border: 1px solid #7fad39;
@@ -92,7 +92,8 @@ form #store_not{
     text-transform: uppercase;
     letter-spacing: 2px;
     color: white;
-    margin-top: 30px;
-	align: center;
 }
+
+
+
 
