--- a/src/main/webapp/resources/css/storelist.css
+++ b/src/main/webapp/resources/css/storelist.css
@@ -38,7 +38,8 @@ table {
 }
 .row {
 	display: flex;
-   justify-content : center;
+	flex-wrap: wrap;
+   /* justify-content : center; */
 }
 
 #card_row {
