--- a/src/main/webapp/resources/css/member_liststoreStyle.css
+++ b/src/main/webapp/resources/css/member_liststoreStyle.css
@@ -97,3 +97,8 @@ tr{
 	display: flex;
 	width: 100%;
 }
+a {
+    color: #7fad39;
+    text-decoration: none;
+    background-color: transparent;
+}
