--- a/src/main/webapp/resources/css/store_updateStyle.css
+++ b/src/main/webapp/resources/css/store_updateStyle.css
@@ -165,7 +165,7 @@ readonly
 }
 
 .id_input_box_ss {
-	width: 100%;
+	width: 500px;
 	height: 250px;
 	display: flex;
 	justify-content: flex-start;
