--- a/src/main/webapp/resources/css/modal.css
+++ b/src/main/webapp/resources/css/modal.css
@@ -52,6 +52,12 @@
 	/*height: */
 }
 
+.modal-textbox-ti ts {
+	margin-left:10px;
+	width: 120px;
+	/*height: */
+}
+
 .modal-textbox td {
 	width: 180px;
 	/*height: */
