--- a/src/main/webapp/resources/css/modal_middle.css
+++ b/src/main/webapp/resources/css/modal_middle.css
@@ -19,8 +19,8 @@
     margin: 10% auto; /* 10% from the top and centered */
     padding: 0px;
     border: 5px solid #585858;
-    width: 600px; /* Could be more or less, depending on screen size */    
-    height: 570px;                       
+    width: 800px; /* Could be more or less, depending on screen size */    
+    height: 630px;                       
 }
 
 
@@ -51,14 +51,51 @@
 
 .modal-content ts {
 	margin-left:60px;
-	width: 100px;
+	width: 90px;
 	/*height: */
+}
+
+.modal-textbox-qna ts {
+	margin-left:16px;
+	width: 90px;
+}
+
+.modal-textbox-star-num {
+	width: 210px;
+}
+
+.modal-textbox-star-num ts {
+	margin-right:5px;
+	margin-left:0px;
+	
+}
+
+.modal-textbox-star ts {
+	margin-right:10px;
+	margin-left:0px;
+	width: 50px;
+}
+
+.modal-textbox-starr ts {
+	margin-right:10px;
+	margin-left:0px;
+	width: 40px;
 }
 
 .modal-content #qna_num_f {
 	margin-left:60px;
 	width: 74.28px;
 	/*height: */
+}
+
+.modal-textbox-qna #qna_num_f {
+	margin-left:20px;
+	width: 74.28px;
+	/*height: */
+}
+.modal-content #qna_num_details {
+	margin-left:60px;
+	width: 210px;
 }
 
 .modal-textbox td {
@@ -68,16 +105,25 @@
 
 .modal-textbox {
 	display: flex;
-	justify-content: flex-start;
+	justify-content: space-around;
 	/*align-items: center;*/
 	height: 40px;
+	
+}
+
+.modal-textbox-detail {
+	display: flex;
+	/*justify-content: space-around;*/
+	/*align-items: center;*/
+	height: 40px;
+	
 }
 
 .modal-textbox-ff {
 	display: flex;
 	justify-content: flex-start;
 	/*align-items: center;*/
-	height: 100px;
+	height: 175px;
 }
 
 .modal-textbox-s {
@@ -94,7 +140,17 @@
 	display: flex;
 	justify-content:flex-start;
 	align-items: center;
-	height: 100px;
+	height: 170px;
+	/*width:450px;*/
+	width:100%;
+	margin-right: 60px;
+}
+
+.modal-textbox-rf {
+	display: flex;
+	justify-content:flex-start;
+	align-items: center;
+	height: 130px;
 	/*width:450px;*/
 	width:100%;
 	margin-right: 60px;
@@ -114,8 +170,37 @@
 	justify-content:center;
 	align-items: center;
 	height: 34px;
-	width:35%;
+	width:26%;
 	/*margin-right: 60px;*/
+}
+
+.modal-textbox-qna {
+	display: flex;
+	justify-content:flex-start;
+	align-items: center;
+	height: 34px;
+	width:40%;
+	margin-right: 0px;
+}
+
+.modal-textbox-star {
+	display: flex;
+	justify-content:flex-start;
+	align-items: center;
+	height: 34px;
+	width: 185px;
+	/*width:26%;*/
+	/*margin-right: 60px;*/
+}
+
+.modal-textbox-starr {
+	display: flex;
+	justify-content:flex-start;
+	align-items: center;
+	height: 34px;
+	width: 185px;
+	/*width:26%;*/
+	margin-right: 20px;
 }
 
 
@@ -124,6 +209,11 @@
 }
 
 .modal-textbox-sf textarea{
+	width:100%;
+	height:95%;
+}
+
+.modal-textbox-rf textarea{
 	width:100%;
 	height:95%;
 }
@@ -148,7 +238,22 @@
 	width:100%;
 }
 
+.modal-textbox-star input{
+	width:50%;
+}
+
+.modal-textbox-star-num input{
+	width:33%;
+}
+
+.modal-textbox-starr input{
+	width:50%;
+}
 .modal-textbox-f #qna_num{
+	width:35%;
+}
+
+.modal-textbox-f #qnastore_num{
 	width:35%;
 }
 /*.modal-textbox-ss input {
@@ -160,6 +265,17 @@
     width: 203px;
 }
 
+
+
+.modal-textbox-f #u_id_re {
+	margin-left: 10px;
+    width: 100px;
+}
+
+.modal-textbox-f  #u_id_star{
+	margin-left: 10px;
+    width: 203px;
+}
 
 .modal-textbox-ad {
 	display: flex;
@@ -224,6 +340,34 @@
 	margin : -43px auto;
 	/*text-align: left;*/
 	
+}
+
+.form-check-details {
+	display: flex;
+	/*flex-direction:column;*/
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	margin : 0px auto;
+	/*text-align: left;*/
+	
+}
+
+.form-check-details .btn {
+	border-radius: 3px;
+	text-transform: uppercase;
+	font-weight: bold;
+	letter-spacing: 2px;
+	font-size: 20px;
+	width: 100px;
+	height: 40px;
+	margin :0 20px;
+	/*padding: 14px;*/
+	/*background-color: rgba(0, 100, 0,0.7);*/
+	color: #ffffff;
+	background-color: #7fad39;
+	border: 1px solid #7fad39;
+	padding : 0;
 }
 
 .form-checkkkk .btn {
